--- a/04.《AV Foundation 开发秘籍》读书笔记/第二章 音频播放和录制.md
+++ b/04.《AV Foundation 开发秘籍》读书笔记/第二章 音频播放和录制.md
@@ -1,20 +1,107 @@
 # 第二章 音频播放和录制
 
-## 1. 音频会话分类
+## 1. 音频会话 
 
-### AVAudioSessionCategoryAmbient
-只用于播放音乐，并且可以和 QQ 音乐同时播放，比如玩游戏的时候还想听 QQ 音乐的歌，那么把游戏播放背景音就设置成这种类别。同时，当用户锁屏或者静音时也会随着静音，这种类别适用于背景音乐。
-### AVAudioSessionCategorySoloAmbient（默认）
-也是只用于播放音乐，但是不同的是，用了它就别想听 QQ 音乐了，比如不希望 QQ 音乐干扰的 APP，例如节奏大师。同样当用户锁屏或者静音时也会随着静音，锁屏了就玩不了节奏大师了。
-### AVAudioSessionCategoryPlayback 
-如果锁屏了还想听声音怎么办？用这个类别，比如 APP 本身就是播放器，同时当音乐播放时，其他类似QQ 音乐就不能播放了。所以这种类别一般用于播放器类 App
-### AVAudioSessionCategoryRecord 
-比如微信语音的录制，就要用到这个类别，既然要安静的录音，肯定不希望有 QQ 音乐了，所以其他播放声音会中断。想想微信录音的场景，就知道什么时候用他了。
-### AVAudioSessionCategoryPlayAndRecord 
-用于既需要播放又需要录制声音的应用，比如微信语音聊天，该类别就是专门为这样的场景设计的。
-### AVAudioSessionCategoryAudioProcessing 
-使用硬件解码器处理音频，该音频会话使用期间，不能播放或录音
-### AVAudioSessionCategoryMultiRoute 
-想象一个 DJ 用的 App，手机连着 HDMI 到扬声器播放当前的音乐，然后耳机里面播放下一曲，这种常人不理解的场景，这个类别可以支持多个设备输入输出。
+### 音频会话分类
+
+| Category | 播放类型 | 后台播放 | 静音或屏幕关闭 | 音频输入 | 音频输出 | 作用 |
+| --- | --- | --- | --- | --- | --- | --- |
+| AVAudioSessionCategoryAmbient | 混合播放 | | 有影响 | | 支持 | 游戏背景音乐 |
+| AVAudioSessionCategorySoloAmbient（默认） | 独占播放 | | 有影响 | | 支持 | 微信中播放语音 |  
+| AVAudioSessionCategoryPlayback | 可选 | 支持 | | | 支持 | 音频播放器 |
+| AVAudioSessionCategoryRecord | 独占录音 | 支持 | | 支持 | | 微信中录制语音 | 
+| AVAudioSessionCategoryPlayAndRecord | 可选 | 支持 | | 支持 | 支持 | 微信语音聊天 |
+| AVAudioSessionCategoryAudioProcessing | —— | —— | —— | | | 硬件解码音频 |  
+| AVAudioSessionCategoryMultiRoute | | | | 支持 | 支持 | 多设备输入输出 |
 
 上述分类所提供的几种常见行为可以满足大部分应用程序的需要，如果需要更复杂的功能，上述其中一种分类可以通过使用 options 和 modes 方法进一步自定义开发。
+
+### 激活音频会话
+
+```objc
+- (BOOL)application:(UIApplication *)application didFinishLaunchingWithOptions:(NSDictionary *)launchOptions {
+    
+    AVAudioSession *session = [AVAudioSession sharedInstance];
+    NSError *error;
+    if (![session setCategory:AVAudioSessionCategoryPlayback error:&error]) {
+        NSLog(@"Category Error : %@", error.localizedDescription);
+    }
+    if (![session setActive:YES error:&error]) {
+        NSLog(@"Activation Error : %@", error.localizedDescription);
+    }
+    
+    return YES;
+}
+```
+
+如果分类允许后台播放，则应该打开 Capabilities 中的 Background Modes 继而勾选后台播放音频选项
+
+![pic03](https://github.com/Mayan29/ReadingNotes/blob/master/04.《AV%20Foundation%20开发秘籍》读书笔记/DATA/pic03.png)
+
+## 2. 音频播放
+
+除非需要从网络流中播放音频、需要访问原始音频样本，或者需要非常低的时延，否则 AVAudioPlayer 都能胜任
+
+```objc
+- (void)viewDidLoad {
+    [super viewDidLoad];
+
+    NSURL *fileURL = [[NSBundle mainBundle] URLForResource:@"白洁01" withExtension:@"mp3"];
+    
+    // Must Maintain a strong reference to player
+    self.player = [[AVAudioPlayer alloc] initWithContentsOfURL:fileURL error:nil];
+    
+    if (self.player) {
+   	    self.player.numberOfLoops = -1;  // 循环播放
+        [self.player prepareToPlay];
+    }
+}
+
+- (IBAction)play {
+    
+    [self.player play];
+}
+```
+
+prepareToPlay 方法是可选的，在调用 play 方法前也会自动调用，作用是取得需要的音频硬件并预加载 Audio Queue 的缓冲区，降低调用 play 方法后的延时。
+
+```objc
+- (IBAction)pause {
+    
+    [self.player pause];
+}
+
+- (IBAction)stop {
+    
+    [self.player stop];
+    self.player.currentTime = 0.0f;
+}
+```
+
+通过 pause 和 stop 方法停止的音频都会继续播放。最主要的区别在底层处理上，调用 stop 方法会撤销调用 prepareToPlay 时所做的设置，而调用 pause 方法则不会。
+
+```objc
+// 音量 0 ~ 1
+- (IBAction)voice:(UISlider *)sender {
+    
+    self.player.volume = sender.value;
+}
+
+// 声道 -1 ~ 1
+- (IBAction)pan:(UISlider *)sender {
+    
+    self.player.pan = sender.value;
+}
+
+// 速率 0.5 ~ 2
+- (IBAction)speed:(UISlider *)sender {
+    
+    self.player.rate = sender.value;
+}
+```
+
+如果要改变速率，在初始化 AVAudioPlayer 时应做出如下设置
+
+```objc
+self.player.enableRate = YES;
+```
