《AV Foundation 开发秘籍》第二章 修改

--- a/04.《AV Foundation 开发秘籍》读书笔记/第二章 音频播放和录制.md
+++ b/04.《AV Foundation 开发秘籍》读书笔记/第二章 音频播放和录制.md
@@ -36,8 +36,6 @@
 
 如果分类允许后台播放，则应该打开 Capabilities 中的 Background Modes 继而勾选后台播放音频选项
 
-![pic03](https://github.com/Mayan29/ReadingNotes/blob/master/04.《AV%20Foundation%20开发秘籍》读书笔记/DATA/pic03.png)
-
 ## 2. 音频播放
 
 除非需要从网络流中播放音频、需要访问原始音频样本，或者需要非常低的时延，否则 AVAudioPlayer 都能胜任
@@ -105,3 +103,36 @@ prepareToPlay 方法是可选的，在调用 play 方法前也会自动调用，
 ```objc
 self.player.enableRate = YES;
 ```
+
+## 3. 处理中断事件
+
+当有电话呼入、闹钟响起的时候，播放中的音频会慢慢消失和暂停，但是终止通话后，播放、停止按钮的控件和音频的播放没有恢复。为了优化用户体验，需要监听这些事件，并作出处理：
+
+```objc
+[[NSNotificationCenter defaultCenter] addObserver:self selector:@selector(handleInterruption:) name:AVAudioSessionInterruptionNotification object:[AVAudioSession sharedInstance]];
+```
+```objc
+- (void)handleInterruption:(NSNotification *)notification
+{
+    NSDictionary *info = notification.userInfo;
+    
+    AVAudioSessionInterruptionType type = [info[AVAudioSessionInterruptionTypeKey] unsignedIntegerValue];
+    
+    if (type == AVAudioSessionInterruptionTypeBegan) {
+        
+        // 中断开始，设置停止音乐
+        [self.player pause];
+        
+    } else {
+        
+        // 中断结束，判断是否允许继续播放
+        AVAudioSessionInterruptionOptions options = [info[AVAudioSessionInterruptionOptionKey] unsignedIntegerValue];
+        if (options == AVAudioSessionInterruptionOptionShouldResume) {
+            
+            // 允许继续播放，则继续播放
+            [self.player play];
+        }
+    }
+}
+```
+
