《AV Foundation 开发秘籍》第二章 修改

--- a/04.《AV Foundation 开发秘籍》读书笔记/第二章 音频播放和录制.md
+++ b/04.《AV Foundation 开发秘籍》读书笔记/第二章 音频播放和录制.md
@@ -111,13 +111,13 @@ self.player.enableRate = YES;
 ```objc
 [[NSNotificationCenter defaultCenter] addObserver:self selector:@selector(handleInterruption:) name:AVAudioSessionInterruptionNotification object:[AVAudioSession sharedInstance]];
 ```
+
 ```objc
 - (void)handleInterruption:(NSNotification *)notification
 {
     NSDictionary *info = notification.userInfo;
     
     AVAudioSessionInterruptionType type = [info[AVAudioSessionInterruptionTypeKey] unsignedIntegerValue];
-    
     if (type == AVAudioSessionInterruptionTypeBegan) {
         
         // 中断开始，设置停止音乐
@@ -135,4 +135,155 @@ self.player.enableRate = YES;
     }
 }
 ```
+
+## 4. 对线路改变的响应
+
+播放音频期间插入耳机，音频输出线路变成耳机插孔并继续播放。断开耳机连接，音频线路再次回到设备的内置扬声器播放。虽然线路变化和预期一样，不过按照苹果官方文档，认为该音频应该处于静音状态。
+
+```objc
+[[NSNotificationCenter defaultCenter] addObserver:self selector:@selector(handleRouteChange:) name:AVAudioSessionRouteChangeNotification object:[AVAudioSession sharedInstance]];
+```
+
+```objc
+- (void)handleRouteChange:(NSNotification *)notification
+{
+    NSDictionary *info = notification.userInfo;
+    
+    AVAudioSessionRouteChangeReason reason = [info[AVAudioSessionRouteChangeReasonKey] unsignedIntegerValue];
+    if (reason == AVAudioSessionRouteChangeReasonOldDeviceUnavailable) {
+        
+        AVAudioSessionRouteDescription *previousRoute  = info[AVAudioSessionRouteChangePreviousRouteKey];
+        AVAudioSessionPortDescription  *previousOutput = previousRoute.outputs[0];
+        if ([previousOutput.portType isEqualToString:AVAudioSessionPortHeadphones]) {
+            
+            // 停止播放音乐
+            [self.player stop];
+        }
+    }
+}
+```
+
+## 5. 音频录制
+
+一般情况存在录音功能，必然会有播放功能，所以不能使用默认的录制音频会话，应该使用既可以录制又能播放的 AVAudioSessionCategoryPlayAndRecord
+
+```objc
+- (void)viewDidLoad {
+    [super viewDidLoad];
+    
+    NSURL *url = [NSURL fileURLWithPath:[@"Users/mayan/Desktop" stringByAppendingPathComponent:@"voice.caf"]];
+    NSDictionary *settings = @{
+                               AVFormatIDKey            : @(kAudioFormatAppleIMA4),
+                               AVSampleRateKey          : @22050.0f,
+                               AVNumberOfChannelsKey    : @1,
+                               };
+    self.recorder = [[AVAudioRecorder alloc] initWithURL:url settings:settings error:nil];
+    
+    if (self.recorder) {
+        self.recorder.delegate = self;
+        [self.recorder prepareToRecord];
+    }
+}
+
+- (IBAction)record {
+
+    [self.recorder record];
+}
+
+- (IBAction)recordFinish {
+
+    [self.recorder stop];
+}
+
+// 音频录制完成调用
+- (void)audioRecorderDidFinishRecording:(AVAudioRecorder *)recorder successfully:(BOOL)flag
+{
+    if (flag) {
+        
+        // 一般把录制好的音频复制或者剪切到目的文件夹下
+        NSURL *srcURL = self.recorder.url;
+        NSURL *destURL = [NSURL URLWithString:@"目的文件路径/音频文件名称.caf"];
+        
+        [[NSFileManager defaultManager] copyItemAtURL:srcURL toURL:destURL error:nil];
+    }
+}
+```
+
+在录制音频过程中，Core Audio Format（CAF）通常是最好的容器格式，因为它和内容无关可以保存 Core Audio 支持的任何音频格式。在设置字典中指定的键值信息也值得讨论一番：
+
+### 音频格式
+
+AVFormatIDKey 定义了写入内容的音频格式，下面是常用格式：
+
+- kAudioFormatLinearPCM：将未压缩的音频流写入到文件中。保真度最高，文件也最大； 
+- kAudioFormatMPEG4AAC（AAC） 或 kAudioFormat-AppleIMA4（Apple IMA4）：文件显著缩小，还能保证高质量音频
+
+### 采样率
+
+AVSampleRateKey 定义了录音器的采样率，采样率定义了对输入的模拟音频信号每一秒的采样数。采样率越高，越能得到高质量的内容，不过文件相对越大。标准的采样率：8000、16000、22050、44100
+
+### 通道数
+
+AVNumberOfChannelsKey 定义记录音频内容的通道数。默认值 1 是单声道录制，2 是立体声录制。除非使用外部硬件录制，否则应该创建单声道录音。
+
+## 6. 音频测量
+
+AVAudioPlayer 和 AVAudioRecorder 中最实用的功能就是对音频进行测量。Audio Metering 可以读取音频的平均分贝和峰值分贝数据，并使用这些数据以可视化方式将声音大小呈现给用户。
+
+首先在初始化 AVAudioPlayer 或 AVAudioRecorder 时应做出如下设置
+
+```objc
+self.player.meteringEnabled = YES;
+```
+
+```objc
+self.recorder.meteringEnabled = YES;
+```
+
+点击音频播放或者音频录制，开始测量
+
+```objc
+- (void)startMeterTimer
+{
+    [self.link invalidate];
+    self.link = [CADisplayLink displayLinkWithTarget:self selector:@selector(updateMeter)];
+    self.link.frameInterval = 4;  // 时间间隔为刷新率的 1/4
+    [self.link addToRunLoop:[NSRunLoop currentRunLoop] forMode:NSRunLoopCommonModes];
+}
+
+- (void)stopMeterTimer
+{
+    [self.link invalidate];
+    self.link = nil;
+}
+```
+
+下面分别是音频播放情况下测量、音频录制情况下测量
+
+```objc
+- (void)updateMeter
+{
+    [self.player updateMeters];  // 刷新
+    
+    CGFloat num1 = [self.player averagePowerForChannel:0];
+    CGFloat num2 = [self.player peakPowerForChannel:0];
+    
+    NSLog(@"平均分贝：%f, 峰值分贝：%f", num1, num2);
+}
+```
+
+```objc
+- (void)updateMeter
+{
+    [self.recorder updateMeters];  // 刷新
+    
+    CGFloat num1 = [self.recorder averagePowerForChannel:0];
+    CGFloat num2 = [self.recorder peakPowerForChannel:0];
+    
+    NSLog(@"平均分贝：%f, 峰值分贝：%f", num1, num2);
+}
+```
+
+上面方法都会返回用于表示声音分贝（dB）等级的浮点值，这个值的范围是 -160dB ~ 0dB
+
 
