《AV Foundation 开发秘籍》第三章 修改

--- a/04.《AV Foundation 开发秘籍》读书笔记/第三章 资源和元数据.md
+++ b/04.《AV Foundation 开发秘籍》读书笔记/第三章 资源和元数据.md
@@ -29,3 +29,53 @@ AVURLAsset *asset = [[AVURLAsset alloc] initWithURL:url options:options];
 
 AVAsset 具有多种方法和属性，可以提供有关资源的信息，比如时长、创建日期和元数据等。AVAsset 使用了一种高效的设计方法，延迟载入资源属性，直到请求时才载入，这样就可以快速创建资源。不过属性的访问是同步发生的，如果正在请求的属性没有预先载入，程序就会阻塞，所以开发者应该使用异步来查询资源的属性。
     
+```objc
+NSURL *url = [[NSBundle mainBundle] URLForResource:@"人渣的本愿真人版01" withExtension:@"mp4"];
+AVAsset *asset = [AVAsset assetWithURL:url];
+    
+[asset loadValuesAsynchronouslyForKeys:@[@"duration"] completionHandler:^{
+        
+    NSError *error;
+    AVKeyValueStatus status = [asset statusOfValueForKey:@"duration" error:&error];
+        
+    switch (status) {
+        case AVKeyValueStatusLoaded:  // 加载完成
+        {
+            dispatch_async(dispatch_get_main_queue(), ^{
+                CMTimeShow(asset.duration);
+            });
+            break;
+        }
+        case AVKeyValueStatusFailed:
+                
+            break;
+        case AVKeyValueStatusCancelled:
+                
+            break;
+        default:
+            break;
+    }
+}];
+```
+
+```objc
+// 取消加载
+[asset cancelLoading];
+```
+
+## 4. 媒体元数据
+
+### 元数据格式
+
+我们在 Apple 环境下遇到的媒体类型主要有四种：
+
+- QuickTime（ mov ）
+- MPEG-4 video（ mp4 和 m4v ）
+- MPEG-4 audio（ m4a ）
+- MPEG-Layer III audio( mp3 )
+
+QuickTime 是由苹果公司开发的一种功能强大、跨平台的媒体架构。
+
+mp4 是对 MPEG-4 媒体的标准扩展，m4v、m4a、m4p、m4b 这些变体都使用 MPEG-4 容器格式，但是包含了附加的拓展功能。m4v 文件是带有针对 FairPlay 加密和 AC3-audio 扩展的 MPEG-4 视频格式，如果不涉及这些 mp4 和 m4v 仅仅是扩展名不同而已。m4a 针对音频，让使用者知道该文件只带有音频资源。m4p 是苹果较旧的 iTunes 音频格式。m4b 用于有声读物，通常包含章节标签和书签功能。
+
+mp3 文件和上面两种有显著区别，mp3 文件不使用容器格式，而使用编码音频数据。mp3 文件使用一种称为 ID3v2 格式来保存关于音频内容的描述信息，包含的数据有歌曲演唱者、所属唱片和音乐风格等。AV Foundation 支持读取 ID3v2 标签的所有版本，但是不支持写入，所以 AV Foundation 无法支持对 mp3 进行编码。
