《AV Foundation 开发秘籍》第三章 修改

--- a/04.《AV Foundation 开发秘籍》读书笔记/第三章 资源和元数据.md
+++ b/04.《AV Foundation 开发秘籍》读书笔记/第三章 资源和元数据.md
@@ -65,17 +65,77 @@ AVAsset *asset = [AVAsset assetWithURL:url];
 
 ## 4. 媒体元数据
 
-### 元数据格式
+### 4.1 元数据格式
 
 我们在 Apple 环境下遇到的媒体类型主要有四种：
 
-- QuickTime（ mov ）
-- MPEG-4 video（ mp4 和 m4v ）
-- MPEG-4 audio（ m4a ）
-- MPEG-Layer III audio( mp3 )
+- QuickTime（ .mov ）
+- MPEG-4 video（ .mp4 和 .m4v ）
+- MPEG-4 audio（ .m4a ）
+- MPEG-Layer III audio( .mp3 )
 
-QuickTime 是由苹果公司开发的一种功能强大、跨平台的媒体架构。
+#### QuickTime（ .mov ）
 
-mp4 是对 MPEG-4 媒体的标准扩展，m4v、m4a、m4p、m4b 这些变体都使用 MPEG-4 容器格式，但是包含了附加的拓展功能。m4v 文件是带有针对 FairPlay 加密和 AC3-audio 扩展的 MPEG-4 视频格式，如果不涉及这些 mp4 和 m4v 仅仅是扩展名不同而已。m4a 针对音频，让使用者知道该文件只带有音频资源。m4p 是苹果较旧的 iTunes 音频格式。m4b 用于有声读物，通常包含章节标签和书签功能。
+QuickTime 是由苹果公司开发的一种功能强大、跨平台的媒体架构。了解 QuickTime 格式的一个好办法就是在十六进制编译器中打开一个 .mov 格式的文件，常见的十六进制编译器有 Hex Fiend 或 Synalyze It! Pro。更好的方法是借助 [Apple Developer Center](https://developer.apple.com/download/more/) 中找到 Atom Inspector 工具，它可以将 atom 结构以 NSOutlineView 方式呈现，所以可以对 atom 之间的继承关系等信息有比较清晰的了解。
 
-mp3 文件和上面两种有显著区别，mp3 文件不使用容器格式，而使用编码音频数据。mp3 文件使用一种称为 ID3v2 格式来保存关于音频内容的描述信息，包含的数据有歌曲演唱者、所属唱片和音乐风格等。AV Foundation 支持读取 ID3v2 标签的所有版本，但是不支持写入，所以 AV Foundation 无法支持对 mp3 进行编码。
+![pic03](https://github.com/Mayan29/ReadingNotes/blob/master/04.《AV%20Foundation%20开发秘籍》读书笔记/DATA/pic03.png)
+
+上图为 QuickTime 结构的简化示意图，该文件最小限度的包含了三个高级 atom，分别是用于描述文件类型和兼容类型的 ftyp，包含实际音视频媒体的 mdat 以及非常重要的 moov atom，它对媒体资源的所有相关细节做了完整描述，包括可呈现的元数据。
+
+#### MPEG-4 video（ .mp4 和 .m4v ）和 MPEG-4 audio（ .m4a ）
+
+mp4 直接派生于 QuickTime 文件格式，这就意味着它们的结构是类似的。实际上，我们经常会发现，能够解析一种文件类型的工具也可以处理其他文件类型，就像 QuickTime 文件一样，mp4 文件也由 atom 数据结构组成。
+
+![pic04](https://github.com/Mayan29/ReadingNotes/blob/master/04.《AV%20Foundation%20开发秘籍》读书笔记/DATA/pic04.png)
+
+mp4 是对 MPEG-4 媒体的标准扩展，m4v、m4a、m4p、m4b 这些变体都使用 MPEG-4 容器格式，但是包含了附加的拓展功能。m4v 文件是带有针对 FairPlay 加密和 AC3-audio 扩展的 MPEG-4 视频格式，如果不涉及这些 mp4 和 m4v 仅仅是扩展名不同而已。m4a 针对音频，让使用者知道该文件只带有音频资源。m4p 是苹果较旧的 iTunes 音频格式，使用其 FairPlay 扩展。m4b 用于有声读物，通常包含章节标签和书签功能。
+
+#### MPEG-Layer III audio( .mp3 )
+
+mp3 文件和上面两种有显著区别，mp3 文件不使用容器格式，而使用编码音频数据，包含的可选元数据的结构块通常位于文件开头。mp3 文件使用一种称为 ID3v2 格式来保存关于音频内容的描述信息，包含的数据有歌曲演唱者、所属唱片和音乐风格等。
+
+![pic05](https://github.com/Mayan29/ReadingNotes/blob/master/04.《AV%20Foundation%20开发秘籍》读书笔记/DATA/pic05.png)
+
+AV Foundation 支持读取 ID3v2 标签的所有版本，但是不支持写入，所以 AV Foundation 无法支持对 mp3 进行编码。
+
+### 4.2 获取元数据
+
+AVAsset 和 AVAssetTrack 都可以实现查询相关元数据的功能。一般使用 AVAsset 提供的元数据，当涉及获取曲目一级元数据等情况时会使用 AVAssestTrack。读取具体资源元数据的接口由 AVMetadataItem 的类提供。
+
+```objc
+NSURL *audioURL = [[NSBundle mainBundle] URLForResource:@"一次就好" withExtension:@"mp3"];
+    
+AVAsset *asset = [AVAsset assetWithURL:audioURL];
+[asset loadValuesAsynchronouslyForKeys:@[@"availableMetadataFormats"] completionHandler:^{
+        
+    NSMutableArray *metaData = [NSMutableArray array];
+    for (NSString *format in asset.availableMetadataFormats) {
+        [metaData addObjectsFromArray:[asset metadataForFormat:format]];
+    }
+        
+    // 歌曲名称
+    AVMetadataItem *titleItem = [AVMetadataItem metadataItemsFromArray:metaData withKey:AVMetadataCommonKeyTitle keySpace:AVMetadataKeySpaceCommon].firstObject;
+    // 演唱者
+    AVMetadataItem *artistItem = [AVMetadataItem metadataItemsFromArray:metaData withKey:AVMetadataCommonKeyArtist keySpace:AVMetadataKeySpaceCommon].firstObject;
+    // 专辑名称
+    AVMetadataItem *albumItem = [AVMetadataItem metadataItemsFromArray:metaData withKey:AVMetadataCommonKeyAlbumName keySpace:AVMetadataKeySpaceCommon].firstObject;
+        
+    NSLog(@"%@ : %@", titleItem.key,  titleItem.value);   // TIT2 : 一次就好
+    NSLog(@"%@ : %@", artistItem.key, artistItem.value);  // TPE1 : 沈腾
+    NSLog(@"%@ : %@", albumItem.key,  albumItem.value);   // TALB : 夏洛特烦恼 电影原声带
+}];
+```    
+
+上面我们使用的是键和键空间来获取元数据，iOS 8 以后还引进了标识符获取元数据的方法：
+
+```objc
+// 歌曲名称
+AVMetadataItem *titleItem = [AVMetadataItem metadataItemsFromArray:metaData filteredByIdentifier:AVMetadataCommonIdentifierTitle].firstObject;
+// 演唱者
+AVMetadataItem *artistItem = [AVMetadataItem metadataItemsFromArray:metaData filteredByIdentifier:AVMetadataCommonIdentifierArtist].firstObject;
+// 专辑名称
+AVMetadataItem *albumItem = [AVMetadataItem metadataItemsFromArray:metaData filteredByIdentifier:AVMetadataCommonIdentifierAlbumName].firstObject;
+```        
+
+### 4.3 编辑元数据
+
