《AV Foundation 开发秘籍》第三章 修改

--- a/04.《AV Foundation 开发秘籍》读书笔记/第三章 资源和元数据.md
+++ b/04.《AV Foundation 开发秘籍》读书笔记/第三章 资源和元数据.md
@@ -108,21 +108,26 @@ NSURL *audioURL = [[NSBundle mainBundle] URLForResource:@"一次就好" withExte
 AVAsset *asset = [AVAsset assetWithURL:audioURL];
 [asset loadValuesAsynchronouslyForKeys:@[@"availableMetadataFormats"] completionHandler:^{
         
-    NSMutableArray *metaData = [NSMutableArray array];
-    for (NSString *format in asset.availableMetadataFormats) {
-        [metaData addObjectsFromArray:[asset metadataForFormat:format]];
+    AVKeyValueStatus commonStatus = [asset statusOfValueForKey:@"availableMetadataFormats" error:nil];
+        
+    if (commonStatus == AVKeyValueStatusLoaded) {
+        
+        NSMutableArray *metaData = [NSMutableArray array];
+        for (NSString *format in asset.availableMetadataFormats) {
+            [metaData addObjectsFromArray:[asset metadataForFormat:format]];
+        }
+        
+        // 歌曲名称
+        AVMetadataItem *titleItem = [AVMetadataItem metadataItemsFromArray:metaData withKey:AVMetadataCommonKeyTitle keySpace:AVMetadataKeySpaceCommon].firstObject;
+        // 演唱者
+        AVMetadataItem *artistItem = [AVMetadataItem metadataItemsFromArray:metaData withKey:AVMetadataCommonKeyArtist keySpace:AVMetadataKeySpaceCommon].firstObject;
+        // 专辑名称
+        AVMetadataItem *albumItem = [AVMetadataItem metadataItemsFromArray:metaData withKey:AVMetadataCommonKeyAlbumName keySpace:AVMetadataKeySpaceCommon].firstObject;
+        
+        NSLog(@"%@ : %@", titleItem.key,  titleItem.value);   // TIT2 : 一次就好
+        NSLog(@"%@ : %@", artistItem.key, artistItem.value);  // TPE1 : 沈腾
+        NSLog(@"%@ : %@", albumItem.key,  albumItem.value);   // TALB : 夏洛特烦恼 电影原声带
     }
-        
-    // 歌曲名称
-    AVMetadataItem *titleItem = [AVMetadataItem metadataItemsFromArray:metaData withKey:AVMetadataCommonKeyTitle keySpace:AVMetadataKeySpaceCommon].firstObject;
-    // 演唱者
-    AVMetadataItem *artistItem = [AVMetadataItem metadataItemsFromArray:metaData withKey:AVMetadataCommonKeyArtist keySpace:AVMetadataKeySpaceCommon].firstObject;
-    // 专辑名称
-    AVMetadataItem *albumItem = [AVMetadataItem metadataItemsFromArray:metaData withKey:AVMetadataCommonKeyAlbumName keySpace:AVMetadataKeySpaceCommon].firstObject;
-        
-    NSLog(@"%@ : %@", titleItem.key,  titleItem.value);   // TIT2 : 一次就好
-    NSLog(@"%@ : %@", artistItem.key, artistItem.value);  // TPE1 : 沈腾
-    NSLog(@"%@ : %@", albumItem.key,  albumItem.value);   // TALB : 夏洛特烦恼 电影原声带
 }];
 ```    
 
@@ -136,6 +141,98 @@ AVMetadataItem *artistItem = [AVMetadataItem metadataItemsFromArray:metaData fil
 // 专辑名称
 AVMetadataItem *albumItem = [AVMetadataItem metadataItemsFromArray:metaData filteredByIdentifier:AVMetadataCommonIdentifierAlbumName].firstObject;
 ```        
+
+注意，有的时候直接打印 key 为一串数字，所以我们创建一个 AVMetadataItem 的分类，将数字转换成字符串
+
+```objc
+NSLog(@"%@ : %@", titleItem.keyString,  titleItem.value);
+NSLog(@"%@ : %@", artistItem.keyString, artistItem.value);
+NSLog(@"%@ : %@", albumItem.keyString,  albumItem.value);
+```
+
+```objc
+#import "AVMetadataItem+Extend.h"
+
+@implementation AVMetadataItem (Extend)
+
+- (NSString *)keyString
+{
+    // 如果 key 是一个字符串，则原样返回
+    if ([self.key isKindOfClass:[NSString class]]) {
+        return (NSString *)self.key;
+    }
+    else if ([self.key isKindOfClass:[NSNumber class]]) {
+        
+        UInt32 keyValue = [(NSNumber *)self.key unsignedIntValue];
+        
+        // 大部分情况下，key 是一个 4 字符代码，比如 ©gen 或 TRAK，不过对于 mp3 文件，键值只有 3 个字符的长度
+        size_t length = sizeof(UInt32);
+        if ((keyValue >> 24) == 0) --length;
+        if ((keyValue >> 16) == 0) --length;
+        if ((keyValue >> 8)  == 0) --length;
+        if ((keyValue >> 0)  == 0) --length;
+        
+        long address = (unsigned long)&keyValue;
+        address += (sizeof(UInt32) - length);
+        
+        // 由于数字是 big endian 格式，因此使用 CFSwapInt32BigToHost() 函数将其转换为符合主 CPU 顺序的 little endian 格式
+        keyValue = CFSwapInt32BigToHost(keyValue);
+        
+        // 创建一个字符数组，并使用 strncpy 函数将字符字节填充到该数组中
+        char cstring[length];
+        strncpy(cstring, (char *) address, length);
+        cstring[length] = '\0';
+        
+        // 大量 QuickTime 用户数据和 iTunes key 的前缀都带有一个 © 符号
+        // 不过 AVMetadataFormat.h 中定义 key 所使用的前缀符号为 @
+        // 所以为了进行 key 常量字符串比较，需要先将 © 替换为 @
+        if (cstring[0] == '\xA9') {
+            cstring[0] = '@';
+        }
+        
+        return [NSString stringWithCString:(char *) cstring
+                                  encoding:NSUTF8StringEncoding];
+    }
+    else {
+        return @"<<unknown>>";
+    }
+}
+
+@end
+```
+
+总结：找不到相关资料，根据我的理解，availableMetadataFormats、metadata、commonMetadata 三者的关系如下
+
+- availableMetadataFormats：`asset.availableMetadataFormats` 获得所有 keys，遍历 keys 根据  `[asset metadataForFormat:key]` 方法获取所有元数据 AVMetadataItem
+
+- metadata：通过 `asset.metadata` 方法直接可以得到所有元数据，据测试和 availableMetadataFormats 获得到的元数据相同
+
+- commonMetadata：通过 `asset.commonMetadata` 方法直接可以得到常用的元数据，但是获取的不全
+
+所以我认为最简单获取元数据方法如下，如果有错误，日后更正：
+
+```objc
+NSURL *audioURL = [[NSBundle mainBundle] URLForResource:@"一次就好" withExtension:@"mp3"];
+    
+AVAsset *asset = [AVAsset assetWithURL:audioURL];
+[asset loadValuesAsynchronouslyForKeys:@[@"metadata"] completionHandler:^{
+        
+    AVKeyValueStatus commonStatus = [asset statusOfValueForKey:@"metadata" error:nil];
+    if (commonStatus == AVKeyValueStatusLoaded) {
+
+        // 歌曲名称
+        AVMetadataItem *titleItem  = [AVMetadataItem metadataItemsFromArray:asset.metadata filteredByIdentifier:AVMetadataCommonIdentifierTitle].firstObject;
+        // 演唱者
+        AVMetadataItem *artistItem = [AVMetadataItem metadataItemsFromArray:asset.metadata filteredByIdentifier:AVMetadataCommonIdentifierArtist].firstObject;
+        // 专辑名称
+        AVMetadataItem *albumItem  = [AVMetadataItem metadataItemsFromArray:asset.metadata filteredByIdentifier:AVMetadataCommonIdentifierAlbumName].firstObject;
+
+        NSLog(@"%@ : %@", titleItem.keyString,  titleItem.value);
+        NSLog(@"%@ : %@", artistItem.keyString, artistItem.value);
+        NSLog(@"%@ : %@", albumItem.keyString,  albumItem.value);
+    }
+}];
+```
 
 ### 4.3 编辑元数据
 
