《AV Foundation 开发秘籍》第三章 修改

--- a/04.《AV Foundation 开发秘籍》读书笔记/第三章 资源和元数据.md
+++ b/04.《AV Foundation 开发秘籍》读书笔记/第三章 资源和元数据.md
@@ -142,7 +142,9 @@ AVMetadataItem *artistItem = [AVMetadataItem metadataItemsFromArray:metaData fil
 AVMetadataItem *albumItem = [AVMetadataItem metadataItemsFromArray:metaData filteredByIdentifier:AVMetadataCommonIdentifierAlbumName].firstObject;
 ```        
 
-注意，有的时候直接打印 key 为一串数字，所以我们创建一个 AVMetadataItem 的分类，将数字转换成字符串
+#### 注意 
+
+有的时候直接打印 key 为一串数字，所以我们创建一个 AVMetadataItem 的分类，将数字转换成字符串
 
 ```objc
 NSLog(@"%@ : %@", titleItem.keyString,  titleItem.value);
@@ -201,7 +203,9 @@ NSLog(@"%@ : %@", albumItem.keyString,  albumItem.value);
 @end
 ```
 
-总结：找不到相关资料，根据我的理解，availableMetadataFormats、metadata、commonMetadata 三者的关系如下
+#### 总结
+
+找不到相关资料，根据我的理解，availableMetadataFormats、metadata、commonMetadata 三者的关系如下
 
 - availableMetadataFormats：`asset.availableMetadataFormats` 获得所有 keys，遍历 keys 根据  `[asset metadataForFormat:key]` 方法获取所有元数据 AVMetadataItem
 
