《AV Foundation 开发秘籍》第三章 修改

--- a/04.《AV Foundation 开发秘籍》读书笔记/第三章 资源和元数据.md
+++ b/04.《AV Foundation 开发秘籍》读书笔记/第三章 资源和元数据.md
@@ -240,3 +240,25 @@ AVAsset *asset = [AVAsset assetWithURL:audioURL];
 
 ### 4.3 编辑元数据
 
+AVAssetExportSession 用于将 AVAsset 内容根据导出预设条件进行转码，并将导出资源写到磁盘中。
+
+```objc
+AVAssetExportSession *session = [[AVAssetExportSession alloc] initWithAsset:_asset presetName:AVAssetExportPresetPassthrough];
+session.outputURL      = [self tempURL];  
+session.outputFileType = [self fileType];
+session.metadata       = [self.metadata metadataItems];
+
+[session exportAsynchronouslyWithCompletionHandler:^{
+    if (session.status == AVAssetExportSessionStatusCompleted) {
+        [[NSFileManager defaultManager] removeItemAtURL:_url error:nil];
+        [[NSFileManager defaultManager] moveItemAtURL:session.outputURL toURL:_url error:nil];
+    }
+}];
+```
+
+注意：AVAssetExportPresetPassthrough 可以修改 MPEG-4 和 QuickTime 容器中存在的元数据信息，不过它不能添加新的元数据。添加元数据唯一方法是使用转码预设值。此外，它不能修改 ID3 标签，不支持写入 MP3 数据。
+
+## 5. 封装框架
+
+根据 Learning-AV-Foundation Chapter 3 自行封装了一个元数据获取、编辑的框架，下载地址：[https://github.com/Mayan29/MYAVFoundation](https://github.com/Mayan29/MYAVFoundation)
+
