《AV Foundation 开发秘籍》第四章 修改

--- a/04.《AV Foundation 开发秘籍》读书笔记/第四章 视频播放.md
+++ b/04.《AV Foundation 开发秘籍》读书笔记/第四章 视频播放.md
@@ -84,10 +84,124 @@ CMTime oneSample = CMTimeMake(1, 44100);
 CMTime zeroTime = kCMTimeZero;
 ```
 
+## 4. 显示字幕
 
+显示字幕需要用到两个类：AVMediaSelectionGroup 和 AVMediaSelectionOption，AVMediaSelectionOption 表示 AVAsset 中的备用媒体呈现方式，比如音频、视频、文本轨道。这些轨道可能是指定语言的音频轨道、备用相机角度、指定语言字幕。
+     
+```objc     
+NSArray *mediaCharacteristics = self.asset.availableMediaCharacteristicsWithMediaSelectionOptions;
+```
+     
+该数组中可能包含的字符串值为：
 
+- AVMediaCharacteristicVisual（视频）
+- AVMediaCharacteristicAudible（音频）
+- AVMediaCharacteristicLegible（字幕或隐藏式字幕）
+    
+### 获取所有可选择字幕语言数组   
+ 
+```objc
+- (NSArray *)getSubtitles {
 
+    AVMediaSelectionGroup *group = [self.asset mediaSelectionGroupForMediaCharacteristic:AVMediaCharacteristicLegible];
+    if (group) {
+        NSMutableArray *subtitles = [NSMutableArray array];
+        for (AVMediaSelectionOption *option in group.options) {
+            [subtitles addObject:option.displayName];  // 语言字幕轨道名称，比如 English、Italian、Russian
+        }
+        return subtitles;
+    } else {
+        return nil;
+    }
+}
+```
 
+### 设置字幕
+
+```objc
+- (void)subtitleSelected:(NSString *)subtitle {
+    
+    AVMediaSelectionGroup *group =
+        [self.asset mediaSelectionGroupForMediaCharacteristic:AVMediaCharacteristicLegible];
+    
+    for (AVMediaSelectionOption *option in group.options) {
+        if ([option.displayName isEqualToString:subtitle]) {
+            [self.playerItem selectMediaOption:option inMediaSelectionGroup:group];
+            return;
+        }
+    }
+    [self.playerItem selectMediaOption:nil inMediaSelectionGroup:group];
+}
+```
+
+## 5. 缩略图
+
+AVAssetImageGenerator 定义了两个方法实现从视频资源中检索图片：
+
+1. `copyCGImageAtTime:actualTime:error:` 允许在指定时间点捕捉图片，适合在展示视频缩略图。
+
+2. `generateCGImagesAsynchronouslyForTimes:completionHandler:` 
+允许按照第一个参数所指定的时间段生成一个图片序列，该方法具有很高的性能，只需要调用这一个方法就可以生成一组图片
+
+下面方法为第一种 `copyCGImageAtTime:actualTime:error:` 方法：
+
+```objc
+- (void)generateThumbnails {
+    
+    self.imageGenerator = [AVAssetImageGenerator assetImageGeneratorWithAsset:self.asset];
+    
+    // 默认情况下，捕捉的图片都保持原始维度。设置 maximumSize 的宽度，则会根据视频的宽高比自动设置高度值
+    self.imageGenerator.maximumSize = CGSizeMake([UIScreen mainScreen].bounds.size.width, 0.0f);
+    
+    CMTime duration = self.asset.duration;
+    
+    // 将视频时间轴平均分为 20 个 CMTime 值
+    NSMutableArray *times = [NSMutableArray array];
+    CMTimeValue increment = duration.value / 20;
+    CMTimeValue currentValue = 2.0 * duration.timescale;
+    while (currentValue <= duration.value) {
+        CMTime time = CMTimeMake(currentValue, duration.timescale);
+        [times addObject:[NSValue valueWithCMTime:time]];
+        currentValue += increment;
+    }
+    
+    __block NSUInteger imageCount = times.count;
+    __block NSMutableArray *images = [NSMutableArray array];
+    
+    AVAssetImageGeneratorCompletionHandler handler;
+    
+    // requestedTime : 请求的最初时间，它对应于生成图像的调用中指定的 times 数组中的值
+    // imageRef      : 生成的 CGImageRef，如果在给定的时间点没有生成图片则为 NULL
+    // actualTime    : 图片实际生成的时间，可能和请求时间不同。可以在生成图片前通过 AVAssetImageGenerator 实例设置 requestedTimeToleranceBefore 和 requestedTimeToleranceAfter 值来调整 requestedTime 和 actualTime 的接近程度
+    // result        : AVAssetImageGeneratorResult 用来表示生成图片成功、失败、取消
+    handler = ^(CMTime requestedTime,
+                CGImageRef imageRef,
+                CMTime actualTime,
+                AVAssetImageGeneratorResult result,
+                NSError *error) {
+        
+        if (result == AVAssetImageGeneratorSucceeded) {
+            MYThumbnail *thumbnail =
+                [MYThumbnail thumbnailWithImage:[UIImage imageWithCGImage:imageRef] time:actualTime];
+            [images addObject:thumbnail];
+        } else {
+            NSAssert(error.localizedDescription, error.localizedDescription);
+        }
+        
+        // 如果 imageCount 等于 0 这表明所有图片都处理完成
+        if (--imageCount == 0) {
+            dispatch_async(dispatch_get_main_queue(), ^{
+                [self.playerView.transport setStillsImages:images];
+            });
+        }
+    };
+    [self.imageGenerator generateCGImagesAsynchronouslyForTimes:times completionHandler:handler];
+}
+```
+
+## 6. 封装框架
+
+有很多知识点通过笔记是无法表达清楚的，具体实现还需看代码理解的透彻。根据 Learning-AV-Foundation Chapter 4 自行封装了一个视频播放、设置字幕、获取视频缩略图的框架，下载地址：[https://github.com/Mayan29/MYAVFoundation](https://github.com/Mayan29/MYAVFoundation)
 
 
 
