《AV Foundation 开发秘籍》第六章 修改

--- a/04.《AV Foundation 开发秘籍》读书笔记/第六章 捕捉媒体.md
+++ b/04.《AV Foundation 开发秘籍》读书笔记/第六章 捕捉媒体.md
@@ -4,7 +4,31 @@
 
 ### 捕捉会话
 
-AV Foundation 捕捉栈的核心类 AVCaptureSession，用于连接输入和输出的资源。
+AV Foundation 捕捉栈的核心类 AVCaptureSession，一个捕捉会话相当于一个虚拟的插线板，用于连接输入和输出的资源。
 
 ### 捕捉设备
+
+AVCaptureDevice 为摄像头或麦克风等物理设备定义了一个接口，并针对物理硬件设备定义了大量的控制方法，比如控制摄像头的对焦、曝光、白平衡、闪光灯等。
+
+### 捕捉设备的输入
+
+一个捕捉设备不能直接添加到 AVCaptureSession 中，但是可以通过将它封装在一个 AVCaptureDeviceInput 实例中来添加。这个对象在设备输入数据和捕捉会话间扮演接线板的作用
+
+### 捕捉的输出
+
+AV Foundation 定义了 AVCaptureOutput 的许多扩展类，AVCaptureOutput 是一个抽象基类，用于为从捕捉会话得到的数据寻找输出目的地。框架定义了一些这个抽象类的高级扩展类，比如 AVCaptureStillImageOutput 和 AVCaptureMovieFileOutput，使用它们可以很容易地实现捕捉静态照片和视频的功能。还可以在这里找到底层扩展，比如 AVCaptureAudioDataOutput 和 AVCaptureVideoDataOutput，使用它们可以直接访问硬件捕捉到的数字样本。使用底层输出类需要对捕捉设备的数据渲染有更好的理解，不过这些类可以提供更强大的功能，比如对音频和视频流进行实时处理。
+
+### 捕捉连接
+
+举个例子，AVCaptureMovieFileOutput 可以接受音频和视频数据，所以会话会确定哪些输入产生视频，哪些输入产生音频，并正确地建立连接，这就是 AVCaptureConnection 类。对这些连接的访问可以让开发者对信号流进行底层的控制，比如禁用某些特定的连接，或在音频连接中访问单独的音频轨道。
+
+### 捕捉预览
+
+AVCaptureVideoPreviewLayer 这个类类似于 AVPlayerLayer，同样也支持视频重力的概念，可以控制视频内容渲染的缩放和拉伸效果。
+
+
+
+
+
+
 
