《Objective-C 高级编程》读书笔记

--- a/Notes/02.《Effective Objective-C 2.0 编写高质量 iOS 与 OS X 代码的 52 个有效方法》读书笔记.md
+++ b/Notes/02.《Effective Objective-C 2.0 编写高质量 iOS 与 OS X 代码的 52 个有效方法》读书笔记.md
@@ -1,4 +1,4 @@
-# 《Effective Objective-C 2.0》读书笔记
+# 《Effective Objective-C 2.0 编写高质量 iOS 与 OS X 代码的 52 个有效方法》读书笔记
 
 ![封面](https://github.com/Mayan29/Blog/blob/master/Notes/Images/02-image01.jpg)
 
