--- a/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
+++ b/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
@@ -1,7 +1,13 @@
 # 《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记
 
 
-![封面](https://github.com/Mayan29/ReadingNotes/blob/master/03.《Objective-C%20高级编程：iOS%20与%20OS%20X%20多线程和内存管理》读书笔记/DATA/pic00.png)
+![封面](https://github.com/Mayan29/Blog/blob/master/Notes/Images/03-image01.jpg)
+
+> 作者：坂本一树 / 古本智彦 
+> 
+> 出版日期：2013-6-1
+> 
+> 豆瓣地址：https://book.douban.com/subject/24720270/
 
 
 ## 1. 对象创建与释放的内部实现
@@ -129,4 +135,4 @@ autorelease 的内部就是调用 NSAutoreleasePool 方法实现的。
 
 ## 2. ARC 的内部实现
 
-65页
+65页 
