《Objective-C 高级编程》读书笔记

--- a/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
+++ b/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
@@ -10,129 +10,97 @@
 > 豆瓣地址：https://book.douban.com/subject/24720270/
 
 
-## 1. 对象创建与释放的内部实现
+## 1. 引用计数内部实现
 
-### 1.1 alloc
+查看引用计数相关源代码，可以看出每次都会取得 `CFBasicHashRef` 进行操作，由此可知苹果采用散列表（引用计数表）来管理引用计数。
 
-在 NSObject 类的 alloc 类方法上设置断点，追踪程序的执行，以下列出了执行所调用的方法和函数：
+> 散列表（Hash table，也叫哈希表），是根据 key 而直接访问在内存存储位置的数据结构。也就是说，它通过计算一个关于键值的函数，将所需查询的数据映射到表中一个位置来访问记录，这就加快了查找速度。这个映射函数称作散列函数，存放记录的数组称作散列表。
+> 
+> 一个通俗的例子是，为了查找电话簿中某人的号码，可以创建一个按照人名首字母顺序排列的表（即建立人名 x 到首字母 F(x) 的一个函数关系），在首字母为 W 的表中查找`王`姓的电话号码，显然比直接查找就要快得多。这里使用人名作为关键字，`取首字母`是这个例子中散列函数的函数法则 F()，存放首字母的表对应散列表。关键字和函数法则理论上可以任意确定。
 
-```objc
-+ alloc
-+ allocWithZone:
-class_createInstance
-calloc
-```
+引用计数表各记录中存有内存块地址，可以各个记录追溯到各对象的内存块。这一特性在调试时有着重要的作用：即使出现故障导致对象占用的内存块损坏，但只要引用计数表没有被破坏，就能够确认各内存块的位置：
 
-alloc 类方法首先调用 allocWithZone: 类方法，然后调用 class_createInstance 函数，最后通过调用 calloc 来分配内存块。class_createInstance 函数的源代码可以通过 [objc4 库](https://opensource.apple.com/source/objc4/objc4-709/runtime/)中的 runtime/objc-runtime-new.mm 进行确认
-
-### 1.2 retainCount / retain / release
-
-retainCount / retain / release 分别调用的方法和函数：
-
-```objc
-- retainCount
-__CFDoExternRefOperation
-CFBasicHashGetCountOfKey
-```
-
-```objc
-- retain
-__CFDoExternRefOperation
-CFBasicHashAddValue
-```
-
-```objc
-- release
-__CFDoExternRefOperation
-CFBasicHashRemoveValue
-（CFBasicHashRemoveValue 返回 0 时，- release 调用 dealloc）
-```
-
-各个方法都调用了 CFRuntime.c 的 __CFDoExternRefOperation 函数，下面是简化后的源代码：
-
-```objc
-int __CFDoExternRefOperation(uintptr_t op, id obj) {
-	CFBasicHashRef table = 取得对象对应的散列表（obj）;
-	int count;
-	
-	switch(op) (
-	case OPERATION_retainCount:
-		count = CFBasicHashGetCountOfKey(table, obj);
-		return count;
-	case OPERATION_retain:
-		CFBasicHashAddValue(table, obj);
-		return obj;
-	case OPERATION_release:
-		count = CFBasicHashRemoveValue(table, obj);
-		return 0 == count;
-	)
-}
-```
-
-苹果的实现就是采用散列表（引用计数表）来管理引用计数：
-
-![通过散列表管理引用计数](https://github.com/Mayan29/ReadingNotes/blob/master/03.《Objective-C%20高级编程：iOS%20与%20OS%20X%20多线程和内存管理》读书笔记/DATA/pic01.png)
-
-GNUstep 将引用计数保存在对象占用内存块头部的变量中，而苹果则是保存在引用计数表的记录中。GNUstep 的实现看起来既简单又高效，但是苹果如此实现必然有它的好处：
-
-通过内存块头部管理引用计数的好处：
-
-- 少量代码即可完成；
-- 能够统一管理引用计数用内存块与对象用内存块。
-
-通过引用计数表管理引用计数的好处：
-
-- 对象用内存块的分配无需考虑内存块头部；
-- 引用计数表各记录中存有内存块地址，可以各个记录追溯到各对象的内存块。
-
-第二条这一特性在调试时有着重要的作用：即使出现故障导致对象占用的内存块损坏，但只要引用计数表没有被破坏，就能够确认各内存块的位置。下面是通过引用计数表追溯对象：
-
-![通过引用计数表追溯对象](https://github.com/Mayan29/ReadingNotes/blob/master/03.《Objective-C%20高级编程：iOS%20与%20OS%20X%20多线程和内存管理》读书笔记/DATA/pic02.png)
+![通过引用计数表追溯对象](https://github.com/Mayan29/Blog/blob/master/Notes/Images/03-image02.png)
 
 另外，在利用工具检测内存泄漏时，引用计数表的各记录也有助于检测各对象的持有者是否存在。
 
-### 1.3 autorelease
 
-顾名思义，autorelease 就是自动释放，它类似于 C 语言中自动变量
-的特性。
+## 2. Block 的本质
 
-自动变量：程序执行时，若某自动变量超出其作用域，该自动变量将被自动废弃：
+首先我们创建一个简单的 Demo：
 
 ```objc
-{
-	int a;
+int main(int argc, const char * argv[]) {
+    
+    void (^blk)(void) = ^{
+        printf("Hello World.");
+    };
+    blk();
+    return 0;
 }
 ```
 
-上面这段代码，因为超出变量作用域，自动变量 `int a` 被废弃，不可再访问。
+使用终端 `$ clang -rewrite-objc main.c` 将 Objective-C 代码转化成 C++ 源代码：
 
-autorelease 的具体使用方法如下：
+```c++
+struct __block_impl {
+  void *isa;
+  int Flags;
+  int Reserved;
+  void *FuncPtr;
+};
 
-1. 生成并持有 NSAutoreleasePool 对象；
-2. 调用已分配对象的 autorelease 实例方法；
-3. 废弃 NSAutoreleasePool 对象。
+struct __main_block_impl_0 {
+  struct __block_impl impl;
+  struct __main_block_desc_0* Desc;
 
-一般情况下，我们不会使用 NSAutoreleasePool 对象来进行开发工作，但是在大量产生 autorelease 的对象时，只要不废弃 NSAutoreleasePool 对象，那么生成的对象就不能被释放，导致内存不足。
+  __main_block_impl_0(void *fp, struct __main_block_desc_0 *desc, int flags=0) {
+    impl.isa = &_NSConcreteStackBlock;
+    impl.Flags = flags;
+    impl.FuncPtr = fp;
+    Desc = desc;
+  }
+};
 
-典型的例子就是，读入大量图像的同时改变其尺寸。图像文件读入到 NSData 对象，并从中生成 UIImage 对象，改变该对象尺寸后生成新的 UIImage 对象，产生大量 autorelease 对象。
+static void __main_block_func_0(struct __main_block_impl_0 *__cself) {
+  printf("Hello World.");
+}
 
-解决办法是，在适当的地方生成、持有或废弃 NSAutoreleasePool 对象：
+static struct __main_block_desc_0 {
+  size_t reserved;
+  size_t Block_size;
+} __main_block_desc_0_DATA = { 
+  0, 
+  sizeof(struct __main_block_impl_0)
+};
 
-```objc
-for (int i = 0; i < 图像数; i++) {
-	NSAutoreleasePool *pool = [[NSAutoreleasePool alloc] init];
-	
-	// 读入图像，产生大量 autorelease 对象
-	
-	[pool drain];  // autorelease 对象被一起 release
+int main(int argc, const char * argv[]) {
+
+    void (*blk)(void) = 
+      ((void (*)())&__main_block_impl_0(
+        (void *)__main_block_func_0, &__main_block_desc_0_DATA)
+      );
+
+    ((void (*)(__block_impl *))((__block_impl *)blk)->FuncPtr)((__block_impl *)blk);
+    
+    return 0;
 }
 ```
 
-但是我们在 ARC 需要使用 @autoreleasepool 块替代 NSAutoreleasePool
+我们来看 `main` 中构造函数的调用，因为转换较多，看起来不是很清楚，所以我们去掉转换的部分，具体如下：
 
-autorelease 的内部就是调用 NSAutoreleasePool 方法实现的。
+```c++
+int main(int argc, const char * argv[]) {
+
+    struct __main_block_impl_0 tmp = __main_block_impl_0(__main_block_func_0, &__main_block_desc_0_DATA);
+    struct __main_block_impl_0 *blk = &tmp;
+    
+    return 0;
+}
+```
+
+这样就容易理解了，该源代码中的 block 就是 `__main_block_impl_0` 结构体类型的局部变量，即栈上生成的 `__main_block_impl_0` 结构体实例。再来看 block 调用部分，这就是简单地使用函数指针调用函数。由 block 语法转换的 `__main_block_func_0` 函数指针被赋值成员变量 `FuncPtr` 中，在调用该函数的源代码中可以看出 block 正是作为参数进行了传递。
 
 
-## 2. ARC 的内部实现
 
-65页 
+
