《Objective-C 高级编程》读书笔记

--- a/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
+++ b/Notes/03.《Objective-C 高级编程：iOS 与 OS X 多线程和内存管理》读书笔记.md
@@ -27,7 +27,7 @@
 
 ## 2. Block 的本质
 
-首先我们创建一个简单的 Demo：
+### 例 1
 
 ```objc
 int main(int argc, const char * argv[]) {
@@ -40,7 +40,7 @@ int main(int argc, const char * argv[]) {
 }
 ```
 
-使用终端 `$ clang -rewrite-objc main.c` 将 Objective-C 代码转化成 C++ 源代码：
+使用终端 `$ clang -rewrite-objc main.m` 将 Objective-C 代码转化成 C++ 源代码：
 
 ```c++
 struct __block_impl {
@@ -99,8 +99,272 @@ int main(int argc, const char * argv[]) {
 }
 ```
 
-这样就容易理解了，该源代码中的 block 就是 `__main_block_impl_0` 结构体类型的局部变量，即栈上生成的 `__main_block_impl_0` 结构体实例。再来看 block 调用部分，这就是简单地使用函数指针调用函数。由 block 语法转换的 `__main_block_func_0` 函数指针被赋值成员变量 `FuncPtr` 中，在调用该函数的源代码中可以看出 block 正是作为参数进行了传递。
+这样就容易理解了，该源代码中的 block 就是 `__main_block_impl_0` 结构体类型的局部变量，即栈上生成的 `__main_block_impl_0` 结构体实例。再来看 block 调用部分，这就是简单地使用函数指针调用函数。由 block 语法转换的 `__main_block_func_0` 函数指针被赋值成员变量 `FuncPtr` 中，在调用该函数的源代码中可以看出 block 正是作为参数进行了传递。所以 block 的本质即为 Objective-C 的对象。
+
+### 例 2
+
+```objc
+int main(int argc, const char * argv[]) {
+    
+    int num1 = 10;
+    int num2 = 20;
+    void (^blk)(void) = ^{
+        printf("%d, %d", num1, num2);
+    };
+    blk();
+    return 0;
+}
+```
+
+使用终端 `$ clang -rewrite-objc main.m` 将 Objective-C 代码转化成 C++ 源代码：
+
+```c++
+struct __block_impl {
+  void *isa;
+  int Flags;
+  int Reserved;
+  void *FuncPtr;
+};
+
+struct __main_block_impl_0 {
+  struct __block_impl impl;
+  struct __main_block_desc_0* Desc;
+
+  int num1;
+  int num2;
+
+  __main_block_impl_0(void *fp, struct __main_block_desc_0 *desc, int _num1, int _num2, int flags=0) : num1(_num1), num2(_num2) {
+    impl.isa = &_NSConcreteStackBlock;
+    impl.Flags = flags;
+    impl.FuncPtr = fp;
+    Desc = desc;
+  }
+};
+
+static void __main_block_func_0(struct __main_block_impl_0 *__cself) {
+  int num1 = __cself->num1; // bound by copy
+  int num2 = __cself->num2; // bound by copy
+
+  printf("%d, %d", num1, num2);
+}
+
+static struct __main_block_desc_0 {
+  size_t reserved;
+  size_t Block_size;
+} __main_block_desc_0_DATA = {
+  0, 
+  sizeof(struct __main_block_impl_0)
+};
+
+int main(int argc, const char * argv[]) {
+
+    int num1 = 10;
+    int num2 = 20;
+    void (*blk)(void) = 
+      ((void (*)())&__main_block_impl_0(
+        (void *)__main_block_func_0, &__main_block_desc_0_DATA, num1, num2)
+      );
+
+    ((void (*)(__block_impl *))((__block_impl *)blk)->FuncPtr)((__block_impl *)blk);
+
+    return 0;
+}
+```
+
+与上一个例子相比，block 语法表达式中使用的局部变量被作为成员变量追加到了 `__main_block_impl_0` 结构体中。总的来说，所谓截取局部变量值意味着在执行 block 语法时，block 语法表达式所使用的自动变量值被保存到 block 自身中。
+
+### 例 3
+
+```objc
+int main(int argc, const char * argv[]) {
+    
+    __block int num1 = 10;
+    __block int num2 = 20;
+    void (^blk)(void) = ^{
+        num1 = 100;
+        num2 = 200;
+        printf("%d, %d", num1, num2);
+    };
+    blk();
+    return 0;
+}
+```
+
+使用终端 `$ clang -rewrite-objc main.m` 将 Objective-C 代码转化成 C++ 源代码：
+
+```c++
+struct __block_impl {
+  void *isa;
+  int Flags;
+  int Reserved;
+  void *FuncPtr;
+};
+
+struct __Block_byref_num1_0 {
+  void *__isa;
+  __Block_byref_num1_0 *__forwarding;
+  int __flags;
+  int __size;
+  int num1;
+};
+struct __Block_byref_num2_1 {
+  void *__isa;
+  __Block_byref_num2_1 *__forwarding;
+  int __flags;
+  int __size;
+  int num2;
+};
+
+struct __main_block_impl_0 {
+  struct __block_impl impl;
+  struct __main_block_desc_0* Desc;
+
+  __Block_byref_num1_0 *num1; // by ref
+  __Block_byref_num2_1 *num2; // by ref
+
+  __main_block_impl_0(void *fp, struct __main_block_desc_0 *desc, __Block_byref_num1_0 *_num1, __Block_byref_num2_1 *_num2, int flags=0) : num1(_num1->__forwarding), num2(_num2->__forwarding) {
+    impl.isa = &_NSConcreteStackBlock;
+    impl.Flags = flags;
+    impl.FuncPtr = fp;
+    Desc = desc;
+  }
+};
+
+static void __main_block_func_0(struct __main_block_impl_0 *__cself) {
+  __Block_byref_num1_0 *num1 = __cself->num1; // bound by ref
+  __Block_byref_num2_1 *num2 = __cself->num2; // bound by ref
+
+  (num1->__forwarding->num1) = 100;
+  (num2->__forwarding->num2) = 200;
+  printf("%d, %d", (num1->__forwarding->num1), (num2->__forwarding->num2));
+}
+
+static void __main_block_copy_0(struct __main_block_impl_0*dst, struct __main_block_impl_0*src) {
+    _Block_object_assign(
+      (void*)&dst->num1, 
+      (void*)src->num1, 
+      8/*BLOCK_FIELD_IS_BYREF*/);
+    _Block_object_assign(
+      (void*)&dst->num2, 
+      (void*)src->num2,
+       8/*BLOCK_FIELD_IS_BYREF*/);
+  }
+
+static void __main_block_dispose_0(struct __main_block_impl_0*src) {
+  _Block_object_dispose(
+    (void*)src->num1,
+    8/*BLOCK_FIELD_IS_BYREF*/);
+  _Block_object_dispose(
+    (void*)src->num2, 
+    8/*BLOCK_FIELD_IS_BYREF*/);
+}
+
+static struct __main_block_desc_0 {
+  size_t reserved;
+  size_t Block_size;
+  void (*copy)(struct __main_block_impl_0*, struct __main_block_impl_0*);
+  void (*dispose)(struct __main_block_impl_0*);
+} __main_block_desc_0_DATA = { 
+  0, 
+  sizeof(struct __main_block_impl_0), __main_block_copy_0, __main_block_dispose_0
+};
+
+int main(int argc, const char * argv[]) {
+
+    __attribute__((__blocks__(byref))) __Block_byref_num1_0 num1 = {
+      (void*)0,
+      (__Block_byref_num1_0 *)&num1, 
+      0, 
+      sizeof(__Block_byref_num1_0), 
+      10
+    };
+    __attribute__((__blocks__(byref))) __Block_byref_num2_1 num2 = {
+      (void*)0,
+      (__Block_byref_num2_1 *)&num2,
+       0, 
+       sizeof(__Block_byref_num2_1), 
+       20
+    };
+    void (*blk)(void) = ((void (*)())&__main_block_impl_0((void *)__main_block_func_0, &__main_block_desc_0_DATA, (__Block_byref_num1_0 *)&num1, (__Block_byref_num2_1 *)&num2, 570425344));
+
+    ((void (*)(__block_impl *))((__block_impl *)blk)->FuncPtr)((__block_impl *)blk);
+    
+    return 0;
+}
+```
+
+我们发现，添加了 `__block` 的局部变量竟然变成了结构体实例，栈上生成该结构体的实例：
+
+```objc
+struct __Block_byref_num1_0 {
+  void *__isa;
+  __Block_byref_num1_0 *__forwarding;
+  int __flags;
+  int __size;
+  int num1;
+};
+struct __Block_byref_num2_1 {
+  void *__isa;
+  __Block_byref_num2_1 *__forwarding;
+  int __flags;
+  int __size;
+  int num2;
+};
+```
+
+
+## 3. Block 存储域
+
+通过前面说明可知，block 转换为 block 结构体类型的局部变量，即栈上生成的该结构体的实例。通过之前的说明可知 block 也是 Objective-C 对象，该 block 的类为 `_NSConcreteStackBlock`，具体整理如下：
+
+| 类 | 设置对象的存储域 |
+| --- | --- |
+| _NSConcreteStackBlock | 栈 |
+| _NSConcreteGlobalBlock | 程序的数据区域（.data 区） |
+| _NSConcreteMallocBlock | 堆 |
+
+##### _NSConcreteStackBlock 类型：
+
+```objc
+int main(int argc, const char * argv[]) {
+    
+    void (^blk)(void) = ^{
+        printf("Hello World!");
+    };
+    blk();
+    return 0;
+}
+```
+
+##### _NSConcreteGlobalBlock 类型：
+
+```objc
+void (^blk)(void) = ^{
+    printf("Hello World!");
+};
+
+int main(int argc, const char * argv[]) {
+    
+    blk();
+    return 0;
+}
+```
+
+##### _NSConcreteMallocBlock 类型：
+
+实际上，大多数情形下编译器会恰当进行判断，自动生成将 block 从栈上复制到堆上的代码
+
+
+## 4. Global Dispatch Queue
+
+我们没有必要通过 `dispatch_queue_create` 函数逐个生成队列，只要获取系统标准提供的队列 `Global Dispatch Queue` 即可，获取方法如下：
+
+151页
 
 
 
 
+
+## 后记
+
+> 去年仅阅读了第一篇章，今年花了 3、4 天时间把整本书全部阅读完成。感觉讲的挺不错的，就是废话略多，好多地方需要认认真真仔仔细细的看，看明白了发现，这部分知识早就懂了嘛。感觉比较有用的地方是，block 编译成 c++ 代码后的解析，对 block 低层实现原理豁然开朗。
